add router, css, components

--- a/views/admin/css/header.css
+++ b/views/admin/css/header.css
@@ -1,8 +1,9 @@
 header {
     display: flex;
     justify-content: center;
-    background-color: #42e3f5;
+    background-color: white;
     height: 50px;
+    box-shadow: 1px 1px 5px rgb(0, 0, 0, 0.2);
+
     align-items: center;
-    width: 80%;
 }
