--- a/views/admin/css/footer.css
+++ b/views/admin/css/footer.css
@@ -2,7 +2,7 @@
 footer {
     display: flex;
     justify-content: center;
-    background-color: #42e3f5;
+    background-color: #13646d;
     height: 50px;
     align-items: center;
 }
