--- a/views/admin/css/login.css
+++ b/views/admin/css/login.css
@@ -3,9 +3,25 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 8px;
+    width: 300px;
+    height: 450px;
+
+}
+.container h1 {
+    text-align: center;
+
+}
+form {
+    padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .input {
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
