--- a/views/customs/CustomHeader.css
+++ b/views/customs/CustomHeader.css
@@ -1,18 +1,10 @@
-.custom-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background: #2c3e50;
-    color: white;
-}
-
 .custom-header .avatar {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     cursor: pointer;
-    margin-right: 10px;
+    margin-left: 1100px;
+    border: 1px solid rgba(0,0,0,0.1);
 }
 
 .custom-header .username {
